HelloUltraviolet/Fixtures/RejectedSource/Expressions/SyncContainsYieldFrom/Expected.uv
//! Expected diagnostic metadata for the SyncContainsYieldFrom rejected-source specimen.

expectedDiagnostic("E-CON-0223", "rule.21.Sync-YieldFrom-Err")
